# soda_review

./: Makefile  pyproject.toml  soda_review.py
soda_review/: crud.py  database.py  main.py  models.py  schema.py  soda_review.py
soda_review/database/: sodareview.db  users
tests/: test_soda_review.py
