[tool.poetry]
name = "soda_review"
version = "0.1.0"
description = ""
authors = ["tbumgard <tbumgard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
